New customer fields added, Category bar in Home tab added, Linking used for call and SMS

--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">Repair Shop Customers</string>
+    <string name="app_name">تعمیر لوازم خانگی پیمان</string>
 </resources>
